# learn_streamlit

./: Makefile  README.md  pyproject.toml  requirements.txt
src/: 5-demo.py  6.py  MyApp.py
src/create_a_multipage_app/: Hello.py
src/create_an_app/: uber_pickups.py
