[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learn_streamlit"
version = "0.0.1"
dependencies = [
    "jupyter ~= 1.0",
    "ruff ~= 0.4",
    "streamlit ~= 1.35",
    "watchdog ~= 4.0",
    "pandas",
    "numpy"
]
requires-python = ">=3.11"
authors = [
    {name = "kasrsf"}
]
description = "Learning streamlit!"
readme = "README.md"
license = {text = "MIT License"}

[tool.ruff]
extend-include = ["*.ipynb"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402"]
